client/assets/styles/scss/components/cards-title.scss
// on cards
.container-title-wrapper {
  color: $gray-dark;
  cursor: pointer;
  display: table;
  height: $input-xs;
  margin: 0 auto;
  max-width: 100%;

  &:hover {
    color: $gray-darker;
  }

  &:active {
    color: $purple-light;
  }

  &.no-touching {
    color: $gray;
  }

  // if renaming instead of popover on verification
  &.title-verification {
    cursor: default;

    &:hover,
    &:active {
      color: $gray-dark;
    }
  }

  .icons-warning,
  .icons-arrow-down,
  .spinner-wrapper {
    height: 21px;
    top: 3px;
  }

  .spinner-wrapper {
    color: $gray-light;
    padding: 3px; // sizes element to replace .icons-warning
  }

  .icons-warning {
    color: $orange;
  }
}

.container-title {
  flex: 0 0 auto;
  font-size: 21px;
  font-weight: $weight-bold;
}

// on modal
.modal-dialog .container-title-wrapper {
  margin: 9px auto 3px;

  .container-title {
    font-size: 14px;
    font-weight: 400;

    // naming containers
    &.input {
      background: $gray-lighterest;
      width: 270px; // width of 19 M (19 char limit)

      &:hover {
        color: $gray-dark;
      }

      &:active {
        color: $gray-dark;
      }
    }
  }

  .icons-warning,
  .icons-arrow-down,
  .spinner-wrapper {
    flex: 0 0 18px;
    height: 18px;
  }

  // rename button for verification flow
  .btn-xxs {
    margin: 3px 0 0 6px;
    position: absolute;
  }
}

